fix logo color on scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -10015,10 +10015,13 @@ hr.light {
   background-color: #fff;
   transition: background-color 0.2s ease;
 }
-#mainNav .navbar-brand {
+#mainNav .navbar-brand,
+svg.logo .p1,
+svg.logo .p2 {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   color: #212529;
+  fill: rgba(255, 255, 255, 0.7);
 }
 #mainNav .navbar-nav .nav-item .nav-link {
   color: #6c757d;
@@ -10033,6 +10036,7 @@ hr.light {
 #mainNav .navbar-nav .nav-item .nav-link.active {
   color: #f4623a !important;
 }
+svg.logo { height: 50px; }
 @media (min-width: 992px) {
   #mainNav {
     box-shadow: none;
@@ -10058,8 +10062,13 @@ hr.light {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     background-color: #fff;
   }
-  #mainNav.navbar-scrolled .navbar-brand {
+  #mainNav.navbar-scrolled .navbar-brand,
+  #mainNav.navbar-scrolled svg.logo .p1 {
     color: #212529;
+    fill: #212529;
+  }
+  #mainNav.navbar-scrolled svg.logo .p2 {
+    fill: #f4623a;
   }
   #mainNav.navbar-scrolled .navbar-brand:hover {
     color: #f4623a;
@@ -10081,9 +10090,6 @@ header.masthead {
   background-attachment: scroll;
   background-size: cover;
 }
-svg.logo { height: 50px; }
-svg.logo .p1 { fill: rgba(255, 255, 255, 0.7); }
-svg.logo .p2 { fill: rgba(255, 255, 255, 0.7); }
 header.masthead h1 {
   font-size: 2.25rem;
 }
